--- a/css/style.css
+++ b/css/style.css
@@ -2,35 +2,37 @@
      margin-top: -70px;
      height: 60px;
  }
-
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;  
-  display: inline-block;
-   font-size: 50px;
-  /*line-height: 1.6; */
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-
-  /* Support for all WebKit browsers. */
-  -webkit-font-smoothing: antialiased;
-  /* Support for Safari and Chrome. */
-  text-rendering: optimizeLegibility;
-
-  /* Support for Firefox. */
-  -moz-osx-font-smoothing: grayscale;
-
-  /* Support for IE. */
-  font-feature-settings: 'liga';
-}
-
-.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
-.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
-
+ 
+ .material-icons {
+     font-family: 'Material Icons';
+     font-weight: normal;
+     font-style: normal;
+     display: inline-block;
+     font-size: 50px;
+     /*line-height: 1.6; */
+     text-transform: none;
+     letter-spacing: normal;
+     word-wrap: normal;
+     white-space: nowrap;
+     direction: ltr;
+     /* Support for all WebKit browsers. */
+     -webkit-font-smoothing: antialiased;
+     /* Support for Safari and Chrome. */
+     text-rendering: optimizeLegibility;
+     /* Support for Firefox. */
+     -moz-osx-font-smoothing: grayscale;
+     /* Support for IE. */
+     font-feature-settings: 'liga';
+ }
+ 
+ .material-icons.md-dark {
+     color: rgba(0, 0, 0, 0.54);
+ }
+ 
+ .material-icons.md-dark.md-inactive {
+     color: rgba(0, 0, 0, 0.26);
+ }
+ 
  .app-stretch {
      position: absolute;
      left: 0px;
@@ -202,11 +204,11 @@
  
  .gwd-video-18oz-full {
      width: 100%;
-    height: 100%; 
-    top:0;
-    left:0;    
-    box-shadow: inset 0 1px 4px hsla(0, 0%, 0%, .5), inset 0 0 10px hsla(0, 0%, 0%, .5), 0 0 0 1px hsla(0, 0%, 0%, .1), 0 -1px 2px 1px hsla(0, 0%, 0%, .25), 0 2px 2px 1px hsla(0, 0%, 100%, .5), 0 -2px 10px 2px hsla(0, 0%, 100%, .75), 0 2px 10px 2px hsla(0, 0%, 0%, .25);
-    border-radius: 6px;
+     height: 100%;
+     top: 0;
+     left: 0;
+     box-shadow: inset 0 1px 4px hsla(0, 0%, 0%, .5), inset 0 0 10px hsla(0, 0%, 0%, .5), 0 0 0 1px hsla(0, 0%, 0%, .1), 0 -1px 2px 1px hsla(0, 0%, 0%, .25), 0 2px 2px 1px hsla(0, 0%, 100%, .5), 0 -2px 10px 2px hsla(0, 0%, 100%, .75), 0 2px 10px 2px hsla(0, 0%, 0%, .25);
+     border-radius: 6px;
  }
  
  .gwd-video-18oz-small {
@@ -277,7 +279,7 @@
      position: relative;
      float: left;
      /* height: 130px;    */
-    margin-bottom: 15px;
+     margin-bottom: 15px;
      width: 100%;
      font-family: Roboto;
      font-size: 24px;
@@ -391,8 +393,8 @@
      border: 2px solid lightgray;
      line-height: 1.6;
  }
-
-.rating-btn-small {
+ 
+ .rating-btn-small {
      position: relative;
      margin-top: 13px;
      display: inline-block;
@@ -563,143 +565,168 @@
      float: left;
      width: 100%;
      /* height: 60%; */
-     overflow:hidden;
+     overflow: hidden;
      margin-top: 30px;
      font-family: Verdana;
      text-align: justify;
      font-size: 20px;
  }
-
-.gwd-div-1295 br {
-    line-height: 1.6;
-}
-.video-description-timer-position {
-    position:absolute;
-    top:85%;
-    left:70%;
-    font-size: 80px;
-    font-family: Roboto;
-    text-align: center;
-    color: white;
-    text-shadow: rgb(0, 0, 0) -1px -1px 0px, rgb(0, 0, 0) 1px -1px 0px, rgb(0, 0, 0) -1px 1px 0px, rgb(0, 0, 0) 1px 1px 0px;
-    display: none;
-    
-}
-
-.enjoy-rating-title {
-    color: white;
+ 
+ .gwd-div-1295 br {
+     line-height: 1.6;
+ }
+ 
+ .video-description-timer-position {
+     position: absolute;
+     top: 85%;
+     left: 70%;
+     font-size: 80px;
+     font-family: Roboto;
+     text-align: center;
+     color: white;
      text-shadow: rgb(0, 0, 0) -1px -1px 0px, rgb(0, 0, 0) 1px -1px 0px, rgb(0, 0, 0) -1px 1px 0px, rgb(0, 0, 0) 1px 1px 0px;
-}
-
-.difficulty-rating-title {
-    color: white;
+     display: none;
+ }
+ 
+ .enjoy-rating-title {
+     color: white;
      text-shadow: rgb(0, 0, 0) -1px -1px 0px, rgb(0, 0, 0) 1px -1px 0px, rgb(0, 0, 0) -1px 1px 0px, rgb(0, 0, 0) 1px 1px 0px;
-}
-
-.enjoy-rutine-rating-title {
-    color: white;
+ }
+ 
+ .difficulty-rating-title {
+     color: white;
      text-shadow: rgb(0, 0, 0) -1px -1px 0px, rgb(0, 0, 0) 1px -1px 0px, rgb(0, 0, 0) -1px 1px 0px, rgb(0, 0, 0) 1px 1px 0px;
-}
-
-.satisfaction-rutine-rating-title {
-    color: white;
+ }
+ 
+ .enjoy-rutine-rating-title {
+     color: white;
      text-shadow: rgb(0, 0, 0) -1px -1px 0px, rgb(0, 0, 0) 1px -1px 0px, rgb(0, 0, 0) -1px 1px 0px, rgb(0, 0, 0) 1px 1px 0px;
-}
-
-.difficulty-rutine-rating-title {
-    color: white;
+ }
+ 
+ .satisfaction-rutine-rating-title {
+     color: white;
      text-shadow: rgb(0, 0, 0) -1px -1px 0px, rgb(0, 0, 0) 1px -1px 0px, rgb(0, 0, 0) -1px 1px 0px, rgb(0, 0, 0) 1px 1px 0px;
-}
-
-#register-button {
-    position: absolute;
-    top:5px;
-    right: 5%;
-    width: 50px;
-    height: 50px;
-    border: 2px solid white; 
-    border-radius: 16px; 
-    text-align: center;
-    cursor: pointer;
-}
-
-#register-form {
-    position: absolute;
+ }
+ 
+ .difficulty-rutine-rating-title {
+     color: white;
+     text-shadow: rgb(0, 0, 0) -1px -1px 0px, rgb(0, 0, 0) 1px -1px 0px, rgb(0, 0, 0) -1px 1px 0px, rgb(0, 0, 0) 1px 1px 0px;
+ }
+ 
+ #register-button {
+     position: absolute;
+     top: 5px;
+     right: 5%;
+     width: 50px;
+     height: 50px;
+     border: 2px solid white;
+     border-radius: 16px;
+     text-align: center;
+     cursor: pointer;
+ }
+ 
+ #register-form {
+     position: absolute;
      -webkit-transition: .7s ease-in-out;
      -moz-transition: .7s ease-in-out;
      -o-transition: .7s ease-in-out;
      transition: .7s ease-in-out;
-    
-}
-.register-form-hide {
-    
-    top: -200px;
-    left: 20%;
-    width: 60%;
-    height: 150px;
-    background: white;
-    z-index: 5;  
-    opacity: 0;
-}
-.register-form-show {
-   
-    top: 50px;
-    left: 20%;
-    width: 60%;
-    height: 200px;
-    background: white;
-    z-index: 5;  
-    opacity: 1;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-#textfield {
-    position: absolute;
-    width: 45%;
-    left: 30%;
-    top: 40%;
-    height: 50px;
-    border-bottom: 2px solid gray;
-    font-family: sans-serif;
-    font-size: 40px;
-    color: gray;
-}
-
-#record-btn {
-    position: absolute;
-    width: 15%;
-    left: 80%;
-    top: 40%;
-    height: 50px;
-    border: 2px solid gray;
-    font-family: sans-serif;
-    font-size: 40px;
-    line-height: 1.2;
-    text-align: center;
-    color: gray;
-    background: white;
-    cursor: pointer;
-}
-
-#record-btn:hover {
-    
-    background: gray;
-    color: white;
-}
-
-#register-form-label {
-    position: absolute;
-    width: 20%;
-    left: 5%;
-    top: 40%;
-    height: 50px;
-    text-align: left;      
-    font-family: sans-serif;
-    font-size: 28px;
-    color: gray;
-}
-
-.ease-of-use-rating {
+ }
+ 
+ .register-form-hide {
+     top: -200px;
+     left: 20%;
+     width: 60%;
+     height: 150px;
+     background: white;
+     z-index: 5;
+     opacity: 0;
+ }
+ 
+ .register-form-show {
+     top: 50px;
+     left: 20%;
+     width: 60%;
+     height: 200px;
+     background: white;
+     z-index: 5;
+     opacity: 1;
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+ }
+ 
+ #textfield {
+     position: absolute;
+     width: 45%;
+     left: 30%;
+     top: 40%;
+     height: 50px;
+     border-bottom: 2px solid gray;
+     font-family: sans-serif;
+     font-size: 40px;
+     color: gray;
+ }
+ 
+ #record-btn {
+     position: absolute;
+     width: 15%;
+     left: 80%;
+     top: 40%;
+     height: 50px;
+     border: 2px solid gray;
+     font-family: sans-serif;
+     font-size: 40px;
+     line-height: 1.2;
+     text-align: center;
+     color: gray;
+     background: white;
+     cursor: pointer;
+ }
+ 
+ #record-btn:hover {
+     background: gray;
+     color: white;
+ }
+ 
+ #register-form-label {
+     position: absolute;
+     width: 20%;
+     left: 5%;
+     top: 40%;
+     height: 50px;
+     text-align: left;
+     font-family: sans-serif;
+     font-size: 28px;
+     color: gray;
+ }
+ 
+ .ease-of-use-rating {
      color: white;
      text-shadow: rgb(0, 0, 0) -1px -1px 0px, rgb(0, 0, 0) 1px -1px 0px, rgb(0, 0, 0) -1px 1px 0px, rgb(0, 0, 0) 1px 1px 0px;
+ }
+ 
+ .range-slider__value {
+  display: inline-block;
+  position: relative;
+  width: 60px;
+  color: #fff;
+  /* line-height: 20px; */
+  text-align: center;
+  font-size: 40px;
+  border-radius: 3px;
+  background: #2c3e50;
+  padding: 5px 10px;
+  margin-left: 8px;
+  top: -10px;
+
+}
+.range-slider__value:after {
+  position: absolute;
+  top: 35%;
+  left: -7px;
+  width: 0;
+  height: 0;
+  border-top: 7px solid transparent;
+  border-right: 7px solid #2c3e50;
+  border-bottom: 7px solid transparent;
+  content: '';
 }
